--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joshua Elemide Damilare | WDD131</title>
-  <link rel="stylesheet" href="../wdd131/week01/styles/layout.css">
+  <link rel="stylesheet" href="../week01/styles/layout.css">
 </head>
 
 <body>
