--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <p>footer</p>
+  </header>
   <main></main>
   <aside></aside>
   <footer></footer>
