--- a/index.html
+++ b/index.html
@@ -1,18 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Joshua Elemide Damilare | WDD131</title>
-  <link rel="stylesheet" href="../wdd131/week01/styles/layout.css">
+  <title>WDD 131 - Dynamic Web Fundamentals - Elemide Joshua Damilare</title>
+  <link rel="stylesheet" href="../wdd131/styles/base.css">
+  <meta name="description"
+    content="WDD 131 - Dynamic Web Fundamentals project by Joshua Elemide Damilare. Learn more about me, my background, and interesting facts about Nigeria, the country I live in.">
+  <meta name="author" content="Joshua Elemide Damilare">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:opsz,wght@18..144,700&family=Roboto&display=swap"
+    rel="stylesheet">
+
+  <script src="../wdd131/scripts/getdates.js" defer></script>
 </head>
 
 <body>
-  <header></header>
-  <main></main>
-  <aside></aside>
-  <footer></footer>
+  <header>
+    <span class="course-title">WDD 131 - Dynamic Web Fundamentals"</span>
+    <nav>
+      <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+      <a href="https://byupw.instructure.com/." target="_blank">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/ot/josh/1?lang=eng" target="_blank">Scripture</a>
+      <a href="#">Final Project</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Joshua Elemide Damilare</h1>
+
+    <section class="card section1">
+      <h2>About Me</h2>
+      <img src="../wdd131/images/joshua.webp" alt="My Profile Image" class="my-image">
+      <p>Hi, I'm Joshua Elemide Damilare. I'm a web development student currently taking WDD 131 - Dynamic Web
+        Fundamentals. I'm passionate about learning how to build responsive and interactive websites. I live in Nigeria,
+        and I'm excited to share a bit about myself and my journey in web development.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum consectetur nam doloremque. Rerum, minima
+        consequatur! Error doloremque officiis sunt! Labore numquam reiciendis, tempora nihil asperiores libero repellat
+        consequatur minus soluta.</p>
+
+
+      <!-- <hr> -->
+
+      <h3>Lagos Nigeria</h3>
+      <img src="../wdd131/images/nigeria-flag.webp" alt="" class="nigeria-flag">
+      <p>Nigeria is a vibrant and diverse country located in West Africa, known as the "Giant of Africa" due to its
+        large population and economy. It is the most populous country in Africa and home to over 250 ethnic groups, with
+        English as the official language. Major ethnic groups include the Hausa-Fulani, Yoruba, and Igbo. Nigeria has a
+        rich cultural heritage, famous for its music, film industry (Nollywood), colorful festivals, and traditional
+        fashion.
+      </p>
+      <p>
+        Its economy is driven by oil, agriculture, and a growing tech sector. With bustling cities like Lagos and
+        Abuja, beautiful natural landmarks, and a lively, youthful population, Nigeria stands out as one of Africa’s
+        most influential nations </p>.
+
+    </section>
+
+    <section class="card section2">
+      <h2>Web Dev Resources</h2>
+      <ul class="resource-list">
+        <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
+        <li><a href="https://www.smashingmagazine.com" target="_blank">Smashing Mazagines</a></li>
+        <li><a href="https://css-tricks.com" target="_blank">CSS Tricks</a></li>
+        <li><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp</a></li>
+        <li><a href="https://dev.to" target="_blank">Dev.to</a></li>
+        <li><a href="https://unsplash.com" target="_blank">Unsplash for Image Placeholder</a></li>
+      </ul>
+
+
+      <p class="note">
+        These resources are essential for improving my web development skills. I Explore them regularly to stay updated
+        and inspired.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© <span id="currentyear"></span> | Joshua Elemide Damilare | Nigeria</p>
+    <p id="lastModified"></p>
+  </footer>
 </body>
 
 </html>
