fiinal change done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header>
-    <span class="course-title">WDD 131 - Dynamic Web Fundamentals"</span>
+    <span id="course-title">WDD 131 - Dynamic Web Fundamentals"</span>
     <nav>
       <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
       <a href="https://byupw.instructure.com/." target="_blank">Canvas</a>
