title and author changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../wdd131/styles/base.css">
   <meta name="description"
     content="WDD 131 - Dynamic Web Fundamentals project by Joshua Elemide Damilare. Learn more about me, my background, and interesting facts about Nigeria, the country I live in.">
-  <meta name="author" content="Joshua Elemide Damilare">
+  <meta name="author" content="Elemide Joshua Damilare">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
   </header>
 
   <main>
-    <h1>Joshua Elemide Damilare</h1>
+    <h1>Elemide Joshua Damilare</h1>
 
     <section class="card section1">
       <h2>About Me</h2>
@@ -38,9 +38,9 @@
       <p>Hi, I'm Joshua Elemide Damilare. I'm a web development student currently taking WDD 131 - Dynamic Web
         Fundamentals. I'm passionate about learning how to build responsive and interactive websites. I live in Nigeria,
         and I'm excited to share a bit about myself and my journey in web development.</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum consectetur nam doloremque. Rerum, minima
-        consequatur! Error doloremque officiis sunt! Labore numquam reiciendis, tempora nihil asperiores libero repellat
-        consequatur minus soluta.</p>
+      <p>My family is a close-knit and supportive group. We care deeply for one another and enjoy spending time
+        together. Each member plays a unique role, and we share values like respect, love, and hard work. Whether facing
+        challenges or celebrating joyful moments, we always stand by each other.</p>
 
 
       <!-- <hr> -->
