book of mormon files added

--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-Us">
 
 <head>
   <meta charset="UTF-8">
@@ -9,8 +9,7 @@
   <meta name="author" content="Elemide Joshua Damilare">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:opsz,wght@18..144,700&family=Roboto&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../week02/styles/media-query.css">
   <link rel="stylesheet" href="../week02/styles/media-query-large.css">
 </head>
