A new Webpage | Temple Album

--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,12 @@
   <meta name="author" content="Elemide Joshua Damilare">
   <meta name="keywords" content="temple, album, photo gallery, religion, architecture">
 
-  <link rel="icon" href="#" type="image/png">
+  <link rel="icon" href="../wdd131/images/sacramento.jpg" type="image/png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather:ital,opsz@1,18..144&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="../wdd131/styles/temples.css">
   <link rel="stylesheet" href="../wdd131/styles/temples-large.css">
@@ -23,18 +28,73 @@
 
 <body>
   <header>
-    <p>Temple Album</p>
+    <p id="header-txt">Temple Album</p>
+    <button id="menu"></button>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Old</a>
-      <a href="#">New</a>
-      <a href="#">Large</a>
-      <a href="#">Small</a>
+      <ul class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Old</a></li>
+        <li><a href="#">New</a></li>
+        <li><a href="#">Large</a></li>
+        <li> <a href="#">Small</a></li>
+      </ul>
+
     </nav>
+
+
+
   </header>
 
   <main>
     <h1>Home Page</h1>
+
+    <section class="image-album">
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+
+      <figure>
+        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <figcaption>Utah Temple</figcaption>
+      </figure>
+    </section>
+
   </main>
 
   <footer>
