--- a/temples.html
+++ b/temples.html
@@ -46,7 +46,7 @@
   </header>
 
   <main>
-    <h1>Home Page</h1>
+    <h1>Temple Home Page</h1>
 
     <section class="image-album">
       <figure>
