h2 added and styled

--- a/temples.html
+++ b/temples.html
@@ -46,9 +46,10 @@
   </header>
 
   <main>
-    <h1>Temple Home Page</h1>
+    <h1>Temple</h1>
 
     <section class="image-album">
+      <h2>Temple Photo Collection</h2>
       <figure>
         <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
         <figcaption>Utah Temple</figcaption>
