new changes added on h1

--- a/temples.html
+++ b/temples.html
@@ -46,7 +46,7 @@
   </header>
 
   <main>
-    <h1>Temple</h1>
+    <h1>Temple Album</h1>
 
     <section class="image-album">
       <h2>Temple Photo Collection</h2>
