img alt changed

--- a/temples.html
+++ b/temples.html
@@ -51,47 +51,47 @@
     <section class="image-album">
       <h2>Temple Photo Collection</h2>
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
 
       <figure>
-        <img src="../wdd131/images/sacramento.jpg" alt="BYU Temple Image">
+        <img src="../wdd131/images/sacramento.jpg" alt="Sacramento Temple exterior showing central spire and entrance">
         <figcaption>Utah Temple</figcaption>
       </figure>
     </section>
