--- a/temples.html
+++ b/temples.html
@@ -29,7 +29,7 @@
 <body>
   <header>
     <p id="header-txt">Temple Album</p>
-    <button id="menu"></button>
+    <button id="menu" aria-label="Toggle Navigation Menu"></button>
     <nav>
       <ul class="navigation">
         <li><a href="#">Home</a></li>
