some changes made

--- a/temples.html
+++ b/temples.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="../wdd131/styles/temples-large.css">
 
   <script src="../wdd131/scripts/temples.js" defer></script>
-  <script src="../wdd131/scripts/getdates.js" defer></script>
 </head>
 
 <body>
@@ -100,7 +99,7 @@
 
   <footer>
     <p>© <span id="currentyear"></span> | Joshua Elemide Damilare | Nigeria</p>
-    <p id="lastModified"></p>
+    <p id="lastmodified"></p>
   </footer>
 
 </body>
