--- a/temples.html
+++ b/temples.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="../wdd131/styles/temples.css">
   <link rel="stylesheet" href="../wdd131/styles/temples-large.css">
 
-  <script src="../wdd131/scripts/temples.js" defer></script>
+  <script src="scripts/temples.js" defer></script>
 </head>
 
 <body>
