--- a/place.html
+++ b/place.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../wdd131/styles/place.css">
+  <link rel="stylesheet" href="styles/place.css">
 
   <script src="../wdd131/scripts/place.js" defer></script>
 </head>
@@ -34,7 +34,7 @@
     <div class="space"></div>
     <picture>
       <source srcset="images/nigeria-desktop.webp" media="(min-width: 768px)">
-      <img src="../wdd131/images/nigeria-mobile.webp" alt="">
+      <img src="images/nigeria-mobile.webp" alt="">
     </picture>
 
     <section class="left-box">
