another correction on the img element

--- a/place.html
+++ b/place.html
@@ -56,7 +56,7 @@
     <section class="right-box">
       <div class="box-data1 country-info">
         <h2> Weather</h2>
-        <img src="../wdd131/images/cloud-sun-fill.svg" alt="">
+        <img src="images/cloud-sun-fill.svg" alt="">
         <ul>
           <li id="temperature"><strong>Temperature: </strong>10&deg;C</li>
           <li><strong>Conditions: </strong>Partly Cloudy</li>
