--- a/place.html
+++ b/place.html
@@ -21,7 +21,7 @@
 
   <link rel="stylesheet" href="styles/place.css">
 
-  <script src="../wdd131/scripts/place.js" defer></script>
+  <script src="scripts/place.js" defer></script>
 </head>
 
 <body>
