All set for now

--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="Explore key facts about Nigeria including its weather, population, languages, currency, timezone, calling code, and more">
   <meta name="keywords"
-    content="Nigeria, Nigerian weather, Nigeria population, Nigeria language, Nigerian currency, timezone, calling code" />
+    content="Nigeria, Nigerian weather, Nigeria population, Nigeria language, Nigerian currency, timezone, calling code">
   <meta name="author" content="Elemide Joshua Damilare">
 
   <link rel="shortcut icon" href="../wdd131/images/favicon.ico" type="image/x-icon">
@@ -19,9 +19,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/place.css">
 
   <script src="scripts/place.js" defer></script>
+
+  <link rel="stylesheet" href="styles/place.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     <div class="space"></div>
     <picture>
       <source srcset="images/nigeria-desktop.webp" media="(min-width: 768px)">
-      <img src="images/nigeria-mobile.webp" alt="">
+      <img src="images/nigeria-mobile.webp" alt="Nigeria Government Parliament" width="380" height="374" loading="lazy">
     </picture>
 
     <section class="left-box">
@@ -56,7 +57,7 @@
     <section class="right-box">
       <div class="box-data1 country-info">
         <h2> Weather</h2>
-        <img src="images/cloud-sun-fill.svg" alt="">
+        <img src="images/cloud-sun-fill.svg" alt="Partly Cloudy Emoji" loading="lazy">
         <ul>
           <li id="temperature"><strong>Temperature: </strong>10&deg;C</li>
           <li><strong>Conditions: </strong>Partly Cloudy</li>
