new added added for checking purpose

--- a/place.html
+++ b/place.html
@@ -34,8 +34,9 @@
   <main class="hero-container">
     <div class="space"></div>
     <picture>
-      <source srcset="images/nigeria-desktop.webp" media="(min-width: 768px)">
-      <img src="images/nigeria-mobile.webp" alt="Nigeria Government Parliament" width="380" height="374" loading="lazy">
+      <source srcset="images/nigeria-landscape-desktop.webp" media="(min-width: 768px)">
+      <img src="images/nigeria-landscape-mobile.webp" alt="Nigeria Government Parliament" width="380" height="374"
+        loading="lazy">
     </picture>
 
     <section class="left-box">
