--- a/place.html
+++ b/place.html
@@ -34,9 +34,8 @@
   <main class="hero-container">
     <div class="space"></div>
     <picture>
-      <source srcset="images/nigeria-landscape-desktop.webp" media="(min-width: 768px)">
-      <img src="images/nigeria-landscape-mobile.webp" alt="Nigeria Government Parliament" width="380" height="374"
-        loading="lazy">
+      <source srcset="images/nigeria-desktop.webp" media="(min-width: 768px)">
+      <img src="images/nigeria-mobile.webp" alt="Nigeria Government Parliament" width="380" height="374">
     </picture>
 
     <section class="left-box">
@@ -58,7 +57,7 @@
     <section class="right-box">
       <div class="box-data1 country-info">
         <h2> Weather</h2>
-        <img src="images/cloud-sun-fill.svg" alt="Partly Cloudy Emoji" loading="lazy">
+        <img src="images/cloud-sun-fill.svg" alt="Partly Cloudy Emoji">
         <ul>
           <li id="temperature"><strong>Temperature: </strong>10&deg;C</li>
           <li><strong>Conditions: </strong>Partly Cloudy</li>
