--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -31,25 +31,22 @@
     <button id="menu" aria-label="Toggle Navigation Menu"></button>
     <nav>
       <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Old</a></li>
-        <li><a href="#">New</a></li>
-        <li><a href="#">Large</a></li>
-        <li> <a href="#">Small</a></li>
+        <li><a href="#" id="home">Home</a></li>
+        <li><a href="#" id="old">Old</a></li>
+        <li><a href="#" id="new">New</a></li>
+        <li><a href="#" id="large">Large</a></li>
+        <li> <a href="#" id="small">Small</a></li>
       </ul>
 
     </nav>
-
-
 
   </header>
 
   <main>
     <h1>Temple Album</h1>
-
+    <h2>Temple Photo Collection</h2>
     <section class="image-album">
-      <h2>Temple Photo Collection</h2>
-      
+
     </section>
 
   </main>
