--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -11,7 +11,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@500&family=Poppins:wght@500;700&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="styles/siteplan.css">
 </head>
 
@@ -22,7 +25,8 @@
       <h1>ExcelMind College - Site Plan</h1>
     </div>
     <p><strong>ExcelMind College</strong></p>
-    <p>This name represents a digital academic portal for AGES School, providing resources, admissions info, and updates
+    <p>This name represents a digital academic portal for ExcelMind College, providing resources, admissions info, and
+      updates
       to students, parents, and staff.</p>
   </header>
 
@@ -64,9 +68,9 @@
     <section>
       <h2>Typography</h2>
       <ul>
-        <li><strong>Headings:</strong> 'Roboto Slab', serif - for all major section and page headings.</li>
-        <li><strong>Body Text:</strong> 'Arial', sans-serif - used for readable paragraphs and content.</li>
-        <li><strong>Accent Text / UI:</strong> 'Montserrat',-sans-serif - used for buttons and interface labels.</li>
+        <li><strong>Headings:</strong> "Poppins", sans-serif - for all major section and page headings.</li>
+        <li><strong>Body Text:</strong> "Lato", sans-serif - used for readable paragraphs and content.</li>
+        <li><strong>Accent Text / UI:</strong> "Montserrat", sans-serif - used for buttons and interface labels.</li>
       </ul>
     </section>
 
