--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -11,9 +11,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@500&family=Poppins:wght@500;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/siteplan.css">
 </head>
@@ -70,7 +68,7 @@
       <ul>
         <li><strong>Headings:</strong> "Poppins", sans-serif - for all major section and page headings.</li>
         <li><strong>Body Text:</strong> "Lato", sans-serif - used for readable paragraphs and content.</li>
-        <li><strong>Accent Text / UI:</strong> "Montserrat", sans-serif - used for buttons and interface labels.</li>
+        <!-- <li><strong>Accent Text / UI:</strong> "Montserrat", sans-serif - used for buttons and interface labels.</li> -->
       </ul>
     </section>
 
