minor issue change

--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
 
         <div class="select">
           <!-- Product Name Select -->
-          <label for="productSelect"> Product Name<span aria-hidden="true">*</span></label>
+          <label for="product-select"> Product Name<span aria-hidden="true">*</span></label>
           <select name="product" id="product-select" required>
             <option value="" disabled selected>Select a Product ...</option>
             <!-- Options Populated By Javascript -->
@@ -47,7 +47,7 @@
 
             <label class="rating-items">
               <span>&#9734;</span>
-              <input type="radio" name="rating" id="rating1" value="1" required />
+              <input type="radio" name="rating" id="rating1" value="1" required>
             </label>
 
             <label class="rating-items">
@@ -62,12 +62,12 @@
 
             <label class="rating-items">
               <span>&#9734; &#9734; &#9734; &#9734;</span>
-              <input type="radio" name="rating" id="rating4" value="4" />
+              <input type="radio" name="rating" id="rating4" value="4">
             </label>
 
             <label class="rating-items">
               <span>&#9734; &#9734; &#9734; &#9734; &#9734;</span>
-              <input type="radio" name="rating" id="rating5" value="5" />
+              <input type="radio" name="rating" id="rating5" value="5">
             </label>
           </div>
         </div>
