--- a/form.html
+++ b/form.html
@@ -60,7 +60,7 @@
               <input type="radio" name="rating" id="rating3" value="3">
             </label>
 
-            <label class="rating-items">
+            <label class="rating-items tre">
               <span>&#9734; &#9734; &#9734; &#9734;</span>
               <input type="radio" name="rating" id="rating4" value="4">
             </label>
