--- a/project/about.html
+++ b/project/about.html
@@ -45,70 +45,78 @@
 
   </header>
 
-  <section class="hero">
-    <img src="images/school_building2.webp" alt="ExcelMind Building">
-    <h1>About Excel Mind College</h1>
-    <p class="tagline">Excellence. Discipline. Vision.</p>
-  </section>
-
-  <section class="intro">
-    <p>Founded in 2005, Excel Mind College is dedicated to shaping well-rounded students through a balance of academics,
-      character, and creativity.</p>
-  </section>
-
-  <section class="testimonial-box mission-box" id="testimonialBox">
-    <h2>Our Mission</h2>
-    <p>To nurture and inspire students by providing excellent education, promoting leadership, and fostering innovation
-      through Science, Arts, and Technology.</p>
-  </section>
-
-  <section class="testimonial-box mission-box">
-    <h2>Our Core Values</h2>
-    <ul>
-      <li>🔍 Curiosity and Lifelong Learning</li>
-      <li>🌱 Growth and Discipline</li>
-      <li>🤝 Respect and Integrity</li>
-      <li>🚀 Creativity and Innovation</li>
-    </ul>
-  </section>
-
-  <section class="team">
-    <h2>Meet Our Team</h2>
-
-    <section id="team-profile" class="stream-container">
-
+  <main>
+    <section class="hero">
+      <picture>
+        <source srcset="images/desktop-excelmind-school-building.webp" media="(min-width: 768px)">
+        <img src="images/mobile-excelmind-school-building.webp" alt="ExcelMind Building">
+      </picture>
+      <h1>About Excel Mind College</h1>
+      <p class="tagline">Excellence. Discipline. Vision.</p>
     </section>
-  </section>
 
-  <section class="newsletter">
+    <section class="intro">
+      <p>Founded in 2005, Excel Mind College is dedicated to shaping well-rounded students through a balance of
+        academics,
+        character, and creativity.</p>
+    </section>
 
-    <form id="newsletter-form">
-      <h3>Send Us a Message</h3>
+    <section class="testimonial-box mission-box" id="testimonialBox">
+      <h2>Our Mission</h2>
+      <p>To nurture and inspire students by providing excellent education, promoting leadership, and fostering
+        innovation
+        through Science, Arts, and Technology.</p>
+    </section>
 
-      <div class="form-control">
-        <label for="contact-name">Name</label>
-        <input type="text" id="contact-name" placeholder="Your Name">
-        <small id="error-message">Error Message</small>
-      </div>
+    <section class="testimonial-box mission-box">
+      <h2>Our Core Values</h2>
+      <ul>
+        <li>🔍 Curiosity and Lifelong Learning</li>
+        <li>🌱 Growth and Discipline</li>
+        <li>🤝 Respect and Integrity</li>
+        <li>🚀 Creativity and Innovation</li>
+      </ul>
+    </section>
 
-      <div class="form-control">
-        <label for="contact-message">Send Us Your Thought</label>
-        <textarea id="contact-message" placeholder="Your Message" rows="4"></textarea>
-        <small id="error-message">Error Message</small>
-      </div>
+    <section class="team">
+      <h2>Meet Our Team</h2>
 
-      <input type="submit" value="Send Message">
-    </form>
+      <section id="team-profile" class="stream-container">
 
-    <div id="messageConfirm" class="confirmation"></div>
-  </section>
+      </section>
+    </section>
+
+    <section class="newsletter">
+
+      <form id="newsletter-form">
+        <h3>Send Us a Message</h3>
+
+        <div class="form-control">
+          <label for="contact-name">Name</label>
+          <input type="text" id="contact-name" placeholder="Your Name">
+          <small id="error-message">Error Message</small>
+        </div>
+
+        <div class="form-control">
+          <label for="contact-message">Send Us Your Thought</label>
+          <textarea id="contact-message" placeholder="Your Message" rows="4"></textarea>
+          <small id="error-message">Error Message</small>
+        </div>
+
+        <input type="submit" value="Send Message">
+      </form>
+
+      <div id="messageConfirm" class="confirmation"></div>
+    </section>
+  </main>
+
 
   <footer>
     <p>© 2025 Excel Mind College</p>
     <div class="social-icons">
-      <a href="#"><img src="facebook.svg" alt="Facebook" /></a>
-      <a href="#"><img src="instagram.svg" alt="Instagram" /></a>
-      <a href="mailto:info@excelmind.edu"><img src="email.svg" alt="Email" /></a>
+      <a href="#"><img src="" alt="Facebook" /></a>
+      <a href="#"><img src="" alt="Instagram" /></a>
+      <a href="mailto:info@excelmind.edu"><img src="" alt="Email" /></a>
     </div>
   </footer>
 
