--- a/project/about.html
+++ b/project/about.html
@@ -105,9 +105,14 @@
 
         <input type="submit" value="Send Message">
       </form>
-
-      <div id="messageConfirm" class="confirmation"></div>
     </section>
+
+    <div class="modal" id="subscribeModal">
+      <div class="modal-content">
+        <p id="modalText"></p>
+        <button id="modalClose">Close</button>
+      </div>
+    </div>
   </main>
 
 
