--- a/project/admission.html
+++ b/project/admission.html
@@ -129,8 +129,15 @@
 
         <input type="submit" value="Enroll">
       </form>
-      <div id="confirmation" class="confirmation"></div>
+      <!-- <div id="confirmation" class="confirmation"></div> -->
     </section>
+
+    <div class="modal" id="subscribeModal">
+      <div class="modal-content">
+        <p id="modalText"></p>
+        <button id="modalClose">Close</button>
+      </div>
+    </div>
 
     <section class="map">
       <h3>Campus Location</h3>
