--- a/project/about.html
+++ b/project/about.html
@@ -2,10 +2,22 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>About Us - Excel Mind College</title>
+
+  <meta name="description"
+    content="Learn about Excel Mind College | our mission, values, history, and why we are committed to educational excellence.">
+  <meta name="keywords" content="About Excel Mind College, school mission, vision, history">
+  <meta name="author" content="Joshua Elemide Damilare">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/index.css">
+
   <script src="scripts/about.js" defer></script>
 </head>
 
