--- a/project/admission.html
+++ b/project/admission.html
@@ -4,8 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Admission - Excel Mind College</title>
+
+  <meta name="description"
+    content="Apply to Excel Mind College. Complete the admission form and begin your journey toward academic success.">
+  <meta name="keywords" content="EMC admissions, school application form, enroll">
+  <meta name="author" content="Joshua Elemide Damilare">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+
   <link rel="stylesheet" href="styles/index.css">
+
   <script src="scripts/admission.js" defer></script>
 </head>
 
