--- a/project/index.html
+++ b/project/index.html
@@ -4,8 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Excel Mind College - Home</title>
+
+  <meta name="description"
+    content="Excel Mind College provides quality education and skills for future-ready students. Explore programs, streams, and admissions.">
+  <meta name="keywords" content="Excel Mind College, secondary school, education, learning, admissions, Nigeria">
+  <meta name="author" content="Joshua Elemide Damilare">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+
   <link rel="stylesheet" href="styles/index.css">
+
   <script src="scripts/index.js" defer></script>
 </head>
 
